Fix minor spacing issues in site nav and footer

--- a/src/stylesheets/_footer.scss
+++ b/src/stylesheets/_footer.scss
@@ -1,6 +1,5 @@
 .site_footer_inner_content {
   box-sizing: border-box;
-  display: flex;
   justify-content: space-between;
   padding-top: var(--su-default);
   padding-bottom: var(--su-default);
