--- a/src/stylesheets/_site_nav.scss
+++ b/src/stylesheets/_site_nav.scss
@@ -81,7 +81,7 @@
 
 
   ul {
-    margin: 0.75em 0 0;
+    margin: 0;
     padding-left: var(--su-default);
     padding-right: var(--su-default);
     width: 100%;
